src/styles/style.css
@import "../views/home.css";
@import "./views/apiKey.css";
@import "./views/chatGrupal.css";
@import "./views/chatIndividual.css";
@import "../styles/variables.css";
@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");

@media only screen and (min-width: 768px) and (max-width: 1023px) {
  .header__select {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    gap: 0px;
  }

  .header__btn__clear, .header__btn__ranking {
    margin-top: 20px;
  }
}

@media only screen and (max-width: 767px) {
  h2 {
    display: none;
  }
  h1 {
    font-size: var(--fs-large);
  }

  .header__hero {
    width: 100%;
  }

  .header__select {
    display: flex;
    flex-direction: column;
    align-items: end;
    gap: 10px;
  }

  footer {
    display: flex;
    flex-direction: column;
    align-items: center;
    row-gap: 15px;
  }
}

